# musikr-old

./: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: id3v2.rs
libmusikr/: Cargo.toml
libmusikr/src/: common.rs  file.rs  lib.rs  macros.rs  raw.rs
libmusikr/src/id3/: header.rs  mod.rs  syncdata.rs  util.rs
libmusikr/src/id3/frame/: apic.rs  bin.rs  comments.rs  events.rs  frame_map.rs  geob.rs  lyrics.rs  mod.rs  owner.rs  stats.rs  string.rs  text.rs  url.rs
libmusikr/src/id3v2/: header.rs  mod.rs  search.rs
libmusikr/src/id3v2/frames/: frame_map.rs  header.rs  mod.rs  string.rs
libmusikr/src/id3v2/frames/internal/: apic.rs  bin.rs  comments.rs  events.rs  geob.rs  lyrics.rs  mod.rs  owner.rs  stats.rs  text.rs  time.rs  url.rs
libmusikr/src/tests/: id3v2.rs  mod.rs
musikr/: Cargo.toml  README.md
musikr-cli/: Cargo.toml  README.md
musikr-cli/src/: args.rs  logger.rs  main.rs  mp3.rs  show.rs  stdout.rs
musikr-cli/src/mp3/: id3v2.rs
musikr/res/test/: README.md
musikr/src/: err.rs  file.rs  id3v2.rs  lib.rs  macros.rs  main.rs  raw.rs  string.rs
musikr/src/core/: io.rs  macros.rs  mod.rs  raw.rs  string.rs
musikr/src/id3v2/: collections.rs  compat.rs  frame_map.rs  frames.rs  header.rs  macros.rs  mod.rs  search.rs  syncdata.rs  tag.rs
musikr/src/id3v2/frames/: audio.rs  audio_v3.rs  audio_v4.rs  bin.rs  chapters.rs  comments.rs  encoding.rs  events.rs  file.rs  frame_map.rs  header.rs  internal.rs  lang.rs  lyrics.rs  mod.rs  owner.rs  podcast.rs  stats.rs  string.rs  text.rs  time.rs  types.rs  url.rs  volume.rs
musikr/src/id3v2/frames/audio/: v23.rs  v24.rs
musikr/src/id3v2/frames/internal/: apic.rs  bin.rs  chapters.rs  comments.rs  events.rs  file.rs  geob.rs  lyrics.rs  mod.rs  owner.rs  podcast.rs  stats.rs  text.rs  time.rs  url.rs
musikr/src/tests/: common.rs  id3v2.rs  mod.rs
src/: file.rs  lib.rs  main.rs
src/id3/: frame.rs  header.rs  mod.rs  util.rs
src/id3/frame/: apic.rs  bin.rs  comments.rs  file.rs  geob.rs  lyrics.rs  mod.rs  string.rs  text.rs  url.rs
