[package]
name = "musikr"
version = "0.1.0"
authors = ["OxygenCobalt <oxycblt@abstractr.net>"]
edition = "2018"
description = "Music tag reading/writing library"
license = "GPL-3.0-or-later"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
