[package]
name = "musikr-cli"
version = "0.1.0"
authors = ["OxygenCobalt <oxycblt@abstractr.net>"]
edition = "2018"
description = "Modify the metadata of music files"
license = "GPL-3.0-or-later"
readme = "../README.md"

[[bin]]
name = "musikr"
path = "./src/main.rs"
doc = false

[dependencies]
musikr = { path = "../musikr" }
termcolor = "1.1.2"
log = "0.4.0"

# Use clap, but disable all the dumb bloated enhancements.
# Read the manpage.
[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["color"]