[package]
name = "musikr"
version = "0.1.0"
authors = ["OxygenCobalt <oxycblt@abstractr.net>"]
edition = "2018"
publish = false
description = "Music tag reading/writing library"
license = "GPL-3.0-or-later"
readme = "../README.md"

[dependencies]
indexmap = "1.6.2"
dyn-clone = "1.0.4"
log = "0.4.14"
miniz_oxide = {version = "0.4.4", optional = true}

[features]
default = ["id3v2_zlib"]
id3v2_zlib = ["miniz_oxide"]