[package]
name = "musikr"
version = "0.1.0"
authors = ["OxygenCobalt <oxycblt@abstractr.net>"]
edition = "2021"
publish = false
description = "Powerful audio metadata manipulation"
license = "LGPL-3.0-or-later"
readme = "../README.md"

[dependencies]
dyn-clone = "1.0.4"
log = "0.4.14"
delegate = "0.6.0"
cfg-if = "1.0.0"
miniz_oxide = {version = "0.4.4", optional = true}

[features]
default = ["id3v2_compression"]
id3v2_compression = ["miniz_oxide"]